--- a/src/app/details/details.component.html
+++ b/src/app/details/details.component.html
@@ -1,22 +1,15 @@
 <app-navbar></app-navbar>
-<div *ngFor="let object of (objects | selectedObject: id)">
-  <h2>{{object.name}} Details</h2>
-
+<div *ngIf="object">
+  <h2>{{object.name | uppercase}} Details</h2>
   <div><span>id: </span>{{object.id}}</div>
+  <div><span>name: </span> <input [(ngModel)]="object.name" placeholder="name"/></div>
+  <div><span> Date of create: </span> {{object.creat_data}}</div>
   <div>
-    <label>name:
-      {{object.name}}
-    </label>
-  </div>
-  <div>
-    <span>Date of create: </span> {{object.creat_data}}
-  </div>
-</div>
+    <!--<button mat-raised-button color="accent" routerLink="/edit/:${id}">Редактировать</button>-->
+    <button mat-raised-button color="accent" (click)="save()">Edit</button>
+    <button mat-raised-button color="warn" (click)="delete(object)"> Delete </button>
+    <button mat-raised-button color="primary" (click)="back()"> Back </button>
 
-<div>
-  <button mat-raised-button color="accent" routerLink="/edit">Редактировать</button>
-  <button mat-raised-button color="warn"> Удалить </button>
-  <button mat-raised-button color="primary" (click)="back()"> Назад </button>
-
+  </div>
 </div>
 
