--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -1,12 +1,52 @@
 <app-navbar></app-navbar>
 <h2>My Heroes</h2>
-<ul class="heroes">
-  <li *ngFor="let object of objects"
-      (click)="onSelect(object)" [routerLink]="['/object-details', object.id]">
-    <span class="badge">{{object.id}}</span>{{object.name}}
-  </li>
-</ul>
+<div class="example-container mat-elevation-z8">
+<table class="heroes">
+  <thead>
+  <tr>
+    <th> ID: </th>
+    <th> Name: </th>
+    <th> Date of Create: </th>
+  </tr>
+  </thead>
+  <tbody>
+  <tr *ngFor="let object of objects"
+      (click)="onSelect(object)" routerLink="/detail/{{object.id}}">
+    <td>{{object.id}}</td>
+    <td>{{object.name}}</td>
+    <td>{{object.creat_data}}</td>
+  </tr>
+  </tbody>
+</table>
+</div>
 <div>
-  <button mat-raised-button color="primary"> Add </button>
+  <button mat-raised-button color="primary" (click)="add()"> Add </button>
   <button mat-raised-button color="accent" (click)="back()"> Back </button>
+</div>
+
+<div class="example-container mat-elevation-z8">
+  <table mat-table [dataSource]="dataSource">
+
+    <!-- Position Column -->
+    <ng-container matColumnDef="id">
+      <th mat-header-cell *matHeaderCellDef> No. </th>
+      <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+    </ng-container>
+
+    <!-- Name Column -->
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef> Name </th>
+      <td mat-cell *matCellDef="let element" routerLink="/"> {{element.name}} </td>
+    </ng-container>
+
+
+    <!-- Symbol Column -->
+    <ng-container matColumnDef="creat_data">
+      <th mat-header-cell *matHeaderCellDef> Date of Create </th>
+      <td mat-cell *matCellDef="let element"> {{element.creat_data}} </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
 </div>
