commit 3.1 working http rest + in memory data service + tree + table css try add TranslatePipe

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -4,4 +4,6 @@
   <button  mat-button routerLink="/profile"> Profile </button>
   <button mat-button routerLink=""> Logout</button>
   <button mat-button routerLink="/list"> List of</button>
+  <button (click)="switchLanguage('en')">en</button>
+  <button (click)="switchLanguage('ru')">ru</button>
 </mat-toolbar>
