commit 5 working http rest + in memory data service + tree + table css added translate pipe added menu for languages

--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -1,4 +1,4 @@
-.container{
+.table{
   display: block;
   right: 1rem;
   text-align: justify;
@@ -6,3 +6,6 @@
   padding: 10px;
 }
 
+img{
+  width: 80%;
+}
