--- a/src/app/details/details.component.html
+++ b/src/app/details/details.component.html
@@ -1,16 +1,17 @@
 <app-navbar></app-navbar>
 <div *ngIf="object">
-  <h2>{{'DETAILS' | translate:{'name': object.name} }}</h2>
+  <h2>{{'DETAILS' |  translate:{'name': object.name} | uppercase }}</h2>
   <div><span>{{'ID' | translate}}: </span>{{object.id}}</div>
-  <div><span>{{'NAME' | translate}}: </span> <input [(ngModel)]="object.name" placeholder="name"/></div>
+  <div><span>{{'NAME' | translate}}: </span> <input [(ngModel)]="object.name" placeholder="name" [readOnly]="isReadonly"></div>
   <div><span> {{'DATE_OF_CREATE' | translate}}: </span> {{object.createTime}}</div>
   <div><span> {{'CODE' | translate}}: </span> {{object.code}}</div>
   <div>
-    <!--<button mat-raised-button color="accent" routerLink="/edit/:${id}">Редактировать</button>-->
-    <button mat-raised-button color="accent" class="b1" (click)="save()">{{'EDIT' | translate}}</button>
+      <button  mat-raised-button color="accent" class="b1" *ngIf="isCollapsed" (click)="toggleReadonly(pusher)">{{'EDIT'| translate}}</button>
+      <button   mat-raised-button color="accent" class="b1"*ngIf="!isCollapsed" (click)="save(save)">{{'SAVE' | translate}}</button>
     <button mat-raised-button color="warn" class="b3" (click)="delete(object)"> {{'DELETE' | translate}} </button>
     <button mat-raised-button color="primary" class="b2" (click)="back()"> {{'BACK' | translate}} </button>
 
   </div>
+
 </div>
 
