commit 7 working http rest + in memory data service + tree + table css added translate pipe added menu for languages added switcher for "edit"/"save" added "cancel" added search, need to do beter style added "add" component, need to work with logic for add() on TS

--- a/src/app/details/details.component.css
+++ b/src/app/details/details.component.css
@@ -1,6 +1,4 @@
-.container{
-  width: 200%;
-}
+
 button{
   margin-top: 15px;
   margin-left: 5px;
@@ -16,3 +14,27 @@ h2{
 .b1:hover {background-color: #bad1ff}
 .b2:hover {background-color: #8806a5}
 .b3:hover {background-color: darkred}
+
+div{
+  margin-top: 15px;
+  margin-left: 15px;
+
+}
+span {
+  font-family: Arial, Helvetica, Verdana, sans-serif;
+  font-style: normal;
+  font-size: 120%;
+  font-weight: lighter;
+}
+h2 {
+  font-weight: bolder;
+}
+.example-form {
+  min-width: 150px;
+  max-width: 500px;
+  width: 100%;
+}
+
+.example-full-width {
+  width: 70%;
+}
