--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -25,7 +25,7 @@
   </table>
 </div>
 <div>
-  <button mat-raised-button color="primary" class="b2" (click)="add()"> {{'ADD' | translate}} </button>
+  <button mat-raised-button color="primary" class="b2" routerLink="/add-object"> {{'ADD' | translate}} </button>
   <button mat-raised-button color="accent" class="b1" (click)="back()"> {{'BACK' | translate}} </button>
 </div>
 
