--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -3,12 +3,22 @@
   <button  mat-icon-button routerLink="">Pastry</button>
   <button  mat-button routerLink="/profile"> Profile </button>
   <button mat-button routerLink=""  style="float:right"> Logout</button>
-
   <button  mat-button style="float:right" [matMenuTriggerFor]="menu">
     <mat-icon> <img src="/assets/img/language.png" class="">  </mat-icon> </button>
   <mat-menu #menu="matMenu">
     <button mat-menu-item  (click)="switchLanguage('en')">en</button>
     <button mat-menu-item  (click)="switchLanguage('ru')">ru</button>
   </mat-menu>
+<span style="float: right" id="search-component">
+    <input #searchBox id="search-box" (input)="search(searchBox.value)" placeholder="Search">
+
+    <ul class="search-result">
+      <li *ngFor="let object of objects$ | async" >
+        <a routerLink="/detail/{{object.id}}">
+          {{object.name}}
+        </a>
+      </li>
+    </ul>
+</span>
 
 </mat-toolbar>
