--- a/src/app/add-object/add-object.component.css
+++ b/src/app/add-object/add-object.component.css
@@ -8,3 +8,31 @@
 }
 .b1:hover {background-color: #bad1ff;}
 .b2:hover {background-color: #8806a5}
+
+button{
+  margin-top: 15px;
+  margin-left: 5px;
+}
+div{
+  margin-top: 15px;
+  margin-left: 15px;
+
+}
+p {
+  font-family: Arial, Helvetica, Verdana, sans-serif;
+  font-style: normal;
+  font-size: 120%;
+  font-weight: lighter;
+}
+h2 {
+  font-weight: bolder;
+}
+.example-form {
+  min-width: 40%;
+  max-width: 70%;
+  width: 100%;
+}
+
+.example-full-width {
+  width: 70%;
+}
