--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <mat-toolbar class="table">
   <button  mat-icon-button routerLink="">Pastry</button>
-  <button  mat-button routerLink="/profile"> Profile </button>
+  <button  mat-button routerLink="/profile"> {{'PROFILE' | translate}} </button>
   <button mat-button routerLink=""  style="float:right"> Logout</button>
   <button  mat-button style="float:right" [matMenuTriggerFor]="menu">
     <mat-icon> <img src="/assets/img/language.png" class="">  </mat-icon> </button>
