--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -9,7 +9,7 @@
     <button mat-menu-item  (click)="switchLanguage('en')">en</button>
     <button mat-menu-item  (click)="switchLanguage('ru')">ru</button>
   </mat-menu>
-<span  id="search-component">
+<!-- <span  id="search-component">
     <input #searchBox id="search-box" (input)="search(searchBox.value)" placeholder="Search">
 
     <ul class="search-result">
@@ -19,6 +19,6 @@
         </a>
       </li>
     </ul>
-</span>
+</span>-->
 
 </mat-toolbar>
