--- a/src/app/details/details.component.html
+++ b/src/app/details/details.component.html
@@ -2,38 +2,35 @@
 <div *ngIf="object">
   <h2>{{'DETAILS' |  translate:{'name': object.name} | uppercase }}</h2>
   <div>
-    <form class="example-form">
-    <mat-form-field class="example-full-width">
-      <input matInput placeholder="{{'ID' | translate}}" value="{{object.id}}" readonly>
+    <mat-form-field appearance="outline">
+      <mat-label>{{'ID' | translate}}</mat-label>
+      <input matInput placeholder="ID" [(ngModel)]="object.id" [name]="object.id" readonly>
     </mat-form-field>
-  </form></div>
-  <div><form class="example-form">
-    <mat-form-field class="example-full-width">
-      <input matInput placeholder="{{'NAME' | translate}}" value="{{object.name}}" [readonly]="this.isReadonly">
-    </mat-form-field>
-  </form></div>
-  <div>
-    <form class="example-form">
-    <mat-form-field class="example-full-width">
-      <input matInput placeholder="{{'DATE_OF_CREATE' | translate}}" value="{{object.createTime}}" readonly>
-    </mat-form-field>
-  </form></div>
-  <div>
-    <form class="example-form">
-      <mat-form-field class="example-full-width">
-        <input matInput placeholder="{{'CODE' | translate}}" value="{{object.code}}" [readonly]="this.isReadonly">
-      </mat-form-field>
-    </form>
   </div>
   <div>
-
-      <button  mat-raised-button color="accent" class="b1" *ngIf="isCollapsed" (click)="toggleReadonly(pusher)">{{'EDIT'| translate}}</button>
-      <button   mat-raised-button color="accent" class="b1"*ngIf="!isCollapsed" (click)="save(saves)">{{'SAVE' | translate}}</button>
+    <mat-form-field appearance="outline">
+      <mat-label>{{'NAME' | translate}}</mat-label>
+        <input matInput placeholder="Name" [(ngModel)]="object.name" [name]="object.name" [readonly]="isReadonly">
+    </mat-form-field>
+  </div>
+  <div>
+    <mat-form-field appearance="outline">
+      <mat-label>{{'DATE_OF_CREATE' | translate}}</mat-label>
+      <input matInput placeholder="Name" [(ngModel)]="object.createTime" [name]="object.createTime" readonly>
+    </mat-form-field>
+  </div>
+  <div>
+    <mat-form-field appearance="outline">
+      <mat-label>{{'CODE' | translate}}</mat-label>
+      <input matInput placeholder="Name" [(ngModel)]="object.code" [name]="object.code" [readonly]="isReadonly">
+    </mat-form-field>
+  </div>
+  <div>
+    <button  mat-raised-button color="accent" class="b1" *ngIf="isCollapsed" (click)="toggleReadonly(pusher)">{{'EDIT'| translate}}</button>
+    <button   mat-raised-button color="accent" class="b1"*ngIf="!isCollapsed" (click)="save(saves)">{{'SAVE' | translate}}</button>
     <button mat-raised-button color="warn" class="b3" *ngIf="isCollapsed"(click)="delete(object)"> {{'DELETE' | translate}} </button>
     <button mat-raised-button color="primary" class="b2" *ngIf="isCollapsed" (click)="back()"> {{'BACK' | translate}} </button>
     <button mat-raised-button color="warn" class="b3" *ngIf="!isCollapsed" (click)="toggleReadonly(pusher)">{{'CANCEL' | translate}}</button>
-
   </div>
 
 </div>
-
