--- a/src/app/details/details.component.html
+++ b/src/app/details/details.component.html
@@ -4,25 +4,25 @@
   <div>
     <mat-form-field appearance="outline">
       <mat-label>{{'ID' | translate}}</mat-label>
-      <input matInput placeholder="ID" [(ngModel)]="object.id" [name]="object.id" readonly>
+      <input matInput placeholder="{{'ID' | translate}}" [(ngModel)]="object.id" [name]="object.id" readonly>
     </mat-form-field>
   </div>
   <div>
     <mat-form-field appearance="outline">
       <mat-label>{{'NAME' | translate}}</mat-label>
-        <input matInput placeholder="Name" [(ngModel)]="object.name" [name]="object.name" [readonly]="isReadonly">
+        <input matInput placeholder="{{'NAME' | translate}}" [(ngModel)]="object.name" [name]="object.name" [readonly]="isReadonly">
     </mat-form-field>
   </div>
   <div>
     <mat-form-field appearance="outline">
       <mat-label>{{'DATE_OF_CREATE' | translate}}</mat-label>
-      <input matInput placeholder="Name" [(ngModel)]="object.createTime" [name]="object.createTime" readonly>
+      <input matInput placeholder="{{'DATE_OF_CREATE' | translate}}" [(ngModel)]="object.createTime" [name]="object.createTime" readonly>
     </mat-form-field>
   </div>
   <div>
     <mat-form-field appearance="outline">
       <mat-label>{{'CODE' | translate}}</mat-label>
-      <input matInput placeholder="Name" [(ngModel)]="object.code" [name]="object.code" [readonly]="isReadonly">
+      <input matInput placeholder="{{'CODE' | translate}}" [(ngModel)]="object.code" [name]="object.code" [readonly]="isReadonly">
     </mat-form-field>
   </div>
   <div>
