--- a/src/app/scroll-to-top/scroll-to-top.component.css
+++ b/src/app/scroll-to-top/scroll-to-top.component.css
@@ -1,9 +1,10 @@
-/*.scroll {*/
-  /*position: fixed;*/
-  /*bottom: 5px;*/
-  /*right: 5px;*/
-  /*font-size: 20px;*/
-  /*text-align: center;*/
-  /*border-radius: 5px;*/
-  /*outline: none;*/
-/*}*/
+.scroll {
+  position: fixed;
+  bottom: 5px;
+  right: 5px;
+  font-size: 20px;
+  text-align: center;
+  border-radius: 30px;
+  outline: none;
+  margin-right: 4%;
+}
