--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -45,8 +45,18 @@ ul.search-result {
   margin-top: 0;
   padding-left: 0;
 }
-
-
+.eng{
+  width: 20%;
+  margin-left: 5%;
+}
+.rus{
+  width: 20%;
+  margin-left: 5%;
+}
+::ng-deep .mat-menu-panel{
+  margin-left: 50% ;
+  padding: 0 10px!important;
+  width: 50%!important;}
 /*
 Copyright Google LLC. All Rights Reserved.
 Use of this source code is governed by an MIT-style license that
