--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -4,10 +4,10 @@
   <button  mat-button routerLink="/profile"> {{'PROFILE' | translate}} </button>
   <button mat-button routerLink=""  style="float:right"> Logout</button>
   <button  mat-button style="float:right" [matMenuTriggerFor]="menu">
-    <mat-icon> <img src="/assets/img/language.png" class="">  </mat-icon> </button>
+    <mat-icon> <img src="/assets/img/language.png">  </mat-icon> </button>
   <mat-menu #menu="matMenu">
-    <button mat-menu-item  (click)="switchLanguage('en')">en</button>
-    <button mat-menu-item  (click)="switchLanguage('ru')">ru</button>
+    <button mat-menu-item class="" (click)="switchLanguage('en')">en <img src="/assets/img/english.svg.png" class="eng "> </button>
+    <button mat-menu-item  class="" (click)="switchLanguage('ru')"> ru <img src="/assets/img/Russia.svg.png" class="rus " > </button>
   </mat-menu>
 <!-- <span  id="search-component">
     <input #searchBox id="search-box" (input)="search(searchBox.value)" placeholder="Search">
