--- a/src/app/profile-change/profile-change.component.html
+++ b/src/app/profile-change/profile-change.component.html
@@ -2,7 +2,7 @@
 <div class="container">
   <h2> Profile Details</h2>
   <div>
-    <form class="example-form">
+    <form>
 
       <mat-form-field class="example-full-width">
         <input matInput placeholder="Surname" value="{{profile.surname}}">
